shawk/awk/rdpg/src/compiler/tests/accept/fatal_err/fatal_parse.txt
rdpg-comp.awk: error: file data/fatal_err/fatal_parse.rdpg, line 1, pos 11: unexpected 'terminal' after ':'
start : FOO EOI ;
          ^
expected: 'non-terminal' 

rdpg-comp.awk: error: file data/fatal_err/fatal_parse.rdpg, line 3, pos 7: unexpected ';' after ':'
bar : ;
      ^
expected one of: '\' 'terminal' 'non-terminal' 

rdpg-comp.awk: error: file data/fatal_err/fatal_parse.rdpg, line 5, pos 3: unexpected 'terminal' after ';'
FOO : bar ;
  ^
expected one of: 'non-terminal' 'EOI' 

rdpg-comp.awk: error: parsing failed
